# geo-firewall

./: CMakeLists.txt  README.md  install.sh
config/: firewall.conf
nginx/: webup-ua-geo.conf
scripts/: setup-nftables.sh  teardown-nftables.sh
src/: asn.cpp  asn.hpp  config.cpp  config.hpp  geoip.cpp  geoip.hpp  main.cpp  packet.cpp  packet.hpp  policy.cpp  policy.hpp  stats.cpp  stats.hpp
systemd/: webup-firewall.service
tests/: test_parser.cpp
